--- a/Exercise-2.ipynb
+++ b/Exercise-2.ipynb
@@ -93,7 +93,7 @@
     "tags": []
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Joseph Oluwabiyi"
    ]
   },
   {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -201,10 +201,21 @@
    "outputs": [],
    "source": [
     "# Create the lists below\n",
-    "station_names = None\n",
-    "station_start_years = None\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "station_names = [\n",
+    "    'lighthouse',\n",
+    "    'Harmaja',\n",
+    "    'Suomenlinna aaltopoiju',\n",
+    "    'Kumpula',\n",
+    "    'Kaisaniemi',   \n",
+    "]\n",
+    "station_start_years = [\n",
+    "    2003,\n",
+    "    1989,\n",
+    "    2016,\n",
+    "    2005,\n",
+    "    1844,\n",
+    "]\n",
+    "# YOUR CODE HERE\n"
    ]
   },
   {
@@ -229,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -255,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -311,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -329,7 +340,13 @@
     "# Below, add the stations from the second table to the lists\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "station_names.append ('Malmi airfield')\n",
+    "station_names.append ('Vuosaari harbour')\n",
+    "station_names.append ('Kaivopuisto')\n",
+    "\n",
+    "station_start_years.append(1937)\n",
+    "station_start_years.append(2012)\n",
+    "station_start_years.append(1904)"
    ]
   },
   {
@@ -354,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -379,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -429,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -447,7 +464,8 @@
     "# Below, sort the lists as directed\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "station_names.sort()\n",
+    "station_start_years.reverse()"
    ]
   },
   {
@@ -471,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -533,7 +551,7 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "The station names may not have exactly their start years"
    ]
   },
   {
@@ -560,29 +578,6 @@
     "This is a completely optional task.\n",
     "\n",
     "**NOTE**: If you plan to skip this optional problem, be sure to delete the `raise NotImplementedError()` line in the cell below so that you don't have any errors when we run your notebook!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "5baa8f50e1d4dd0f801af1f4d13aa9fc",
-     "grade": true,
-     "grade_id": "problem_1_mg_p5_zip_test",
-     "locked": false,
-     "points": 0,
-     "schema_version": 3,
-     "solution": true,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
    ]
   },
   {
@@ -639,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -655,22 +650,48 @@
    "outputs": [],
    "source": [
     "# Here is the variable that you should use to set the selected month\n",
-    "selected_month_index = None\n",
     "\n",
     "# Here are also the names of the two lists you should use for this problem. Please do not change the variable names!\n",
-    "months = None\n",
-    "average_temp = None\n",
+    "months = [\n",
+    "    'January',\n",
+    "    'February',\n",
+    "    'March',\n",
+    "    'April',\n",
+    "    'May',\n",
+    "    'June',\n",
+    "    'July',\n",
+    "    'August',\n",
+    "    'September',\n",
+    "    'October',\n",
+    "    'November',\n",
+    "    'Decemeber',\n",
+    "]\n",
+    "average_temp = [\n",
+    "    -3.5,\n",
+    "    -4.5,\n",
+    "    -1.0,\n",
+    "    4.0,\n",
+    "    10.0,\n",
+    "    15.0,\n",
+    "    18.0,\n",
+    "    16.0,\n",
+    "    11.5,\n",
+    "    6.0,\n",
+    "    2.0,\n",
+    "    -1.5\n",
+    "]\n",
+    "\n",
+    "selected_month_index = months[6]\n",
     "\n",
     "# Using the lists and their indices, generate the desired print statement\n",
-    "print_statement = None\n",
+    "print_statement = f'The average temperature in Helsinki in {selected_month_index} is {str(average_temp[6])}'\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -685,7 +706,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average temperature in Helsinki in July is 18.0\n"
+     ]
+    }
+   ],
    "source": [
     "# This cell will help you check that the output of your print statement is correct\n",
     "print(print_statement)"
@@ -715,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -739,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -763,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -840,6 +869,13 @@
     "- What would you change about the lesson?\n",
     "    \n",
     "*Please use a Markdown list when answering these questions.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I learnt how to use list in python."
    ]
   },
   {
@@ -924,7 +960,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
